# sui-deepbook-indexer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  README.zh-CN.md  RELEASE_GUIDE_CLEAN.md
api-go/: .env.local.example  Dockerfile  README.md  go.mod  go.sum
api-go/cmd/: main.go
api-go/internal/config/: config.go
api-go/internal/handlers/: handlers.go  handlers_cursor_test.go
api-go/internal/store/: store.go
common/: Cargo.toml
common/src/: config.rs  lib.rs  pagination.rs  types.rs
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  DATA_CONTRACT.md  DEEPBOOK_EVENTS.md  README.md  USAGE.md
indexer/: .env.local.example  Cargo.toml  Dockerfile  README.md
indexer/src/: config.rs  events.rs  main.rs  remote_store.rs
migrations/: 002_add_pool_ohlc.sql  003_add_order_lifecycle_events.sql  init.sql
storage/: Cargo.toml
storage/src/: db.rs  models.rs  queries.rs
