[workspace]
members = ["common", "indexer", "storage"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
base64 = "0.22"
anyhow = "1"
axum = { version = "0.7", features = ["json", "macros", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
prost-types = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["chrono", "json", "migrate", "postgres", "runtime-tokio-rustls", "rust_decimal"] }
sui-rpc = "0.1.1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rust_decimal = { version = "1", features = ["serde"] }
