[package]
name = "deepbook-indexer-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
prost-types.workspace = true
serde_json.workspace = true
sqlx.workspace = true
sui-rpc.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rust_decimal.workspace = true
tonic = { version = "0.14.2", default-features = false }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"

deepbook-indexer-storage = { path = "../storage" }
