[package]
name = "deepbook-indexer-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rust_decimal.workspace = true
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

# Remote Store dependencies
reqwest.workspace = true
bcs.workspace = true
bytes.workspace = true
hex.workspace = true
url.workspace = true
serde_bytes.workspace = true

# Sui official types
sui-types.workspace = true
sui-sdk-types.workspace = true

# Keep sui-rpc for fallback (optional)
sui-rpc = { workspace = true, optional = true }
tonic = { version = "0.14.2", default-features = false, optional = true }

deepbook-indexer-storage = { path = "../storage" }

[features]
default = []
rpc-fallback = ["sui-rpc", "tonic"]
