[package]
name = "deepbook-indexer-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
rust_decimal.workspace = true

deepbook-indexer-common = { path = "../common" }
